projects-new/p09-cloud-native-poc/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poc-api
  labels:
    name: poc-api
